--- a/style.css
+++ b/style.css
@@ -1,34 +1,69 @@
-header{color:red;
-    font-size: 52px;
-    font-weight: bold;
-    text-align: center;}
-#slogan {
-    justify-content:right;
-    text-align: right;
-    color: green;
-    font-size: 40px;
-    text-align:;
+/* Universal properties
+ */
+* {
+  box-sizing: border-box;
+  border: 2px solid black;
 }
-body {background-color: sandybrown;}
-h1 {
-    font-family: Arial, Helvetica, sans-serif;
-    color: darkblue;
-    font-size: 35px;
-    font-weight: bold;
-    text-decoration: underline;
 
+header {
+  color: red;
+
+  font-size: 52px;
+  font-weight: bold;
+  text-align: center;
+  margin-left: 500px;
+  margin-bottom: auto;
+  float: top;
+  width: 500px;
+}
+
+.logo-med {
+  height: 80px;
+  width: 80px;
+  margin-top: -150px;
+  margin-bottom: 58px;
+}
+
+#slogan {
+  border: 0.5px solid black;
+  text-decoration: underline solid green;
+  font-weight: 700;
+  margin-top: -240px;
+  margin-right: 7px;
+  width: 200px;
+  height: 200px;
+  float: right;
+  color: green;
+  font-size: 40px;
+}
+/* Layout  */
+body {
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: black;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-image: url(./images/pexels-lum3n-44775-399161.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: darkblue;
+  font-size: 35px;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .intro {
-    font-size: 24px;
-    justify-content: left;
-    
-
+  font-size: 24px;
+  justify-content: left;
 }
 
 ul {
-    font-size: 24px;
-    color: red;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    list-style:armenian ;
+  font-size: 24px;
+  color: red;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  list-style: armenian;
 }
