--- a/style.css
+++ b/style.css
@@ -2,38 +2,53 @@
  */
 * {
   box-sizing: border-box;
-  border: 0px solid black;
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
 }
 
 header {
   color: red;
-
-  font-size: 52px;
+  display: block;
+  font-size: 80px;
   font-weight: bold;
   text-align: center;
-  margin-left: 500px;
-  margin-bottom: auto;
-  float: top;
   width: 500px;
+  text-decoration: underline double;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  outline: solid;
+  margin-top: -197px;
+  margin-bottom: 200px;
 }
 
 .logo-med {
-  height: 80px;
-  width: 80px;
-  margin-top: -150px;
-  margin-bottom: 58px;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 0px;
+  left: 0px;
+  opacity: 0.5;
 }
-
+.right-logo {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 0px;
+  right: 0px;
+  opacity: 0.5;
+}
 #slogan {
   border: 0.5px solid black;
-  text-decoration: underline solid green;
+  text-decoration: underline lime;
   font-weight: 700;
   margin-top: -240px;
   margin-right: 7px;
   width: 200px;
   height: 200px;
   float: right;
-  color: green;
+  color: lime;
   font-size: 40px;
 }
 /* Layout  */
@@ -53,6 +68,7 @@ h1 {
   color: darkblue;
   font-size: 35px;
   font-weight: bold;
+  display: block;
   text-decoration: underline;
 }
 
