--- a/style.css
+++ b/style.css
@@ -8,36 +8,66 @@
 }
 
 header {
+  display: flex;
+  justify-content: center;
   color: red;
   display: block;
   font-size: 80px;
   font-weight: bold;
   text-align: center;
-  width: 500px;
+  /* width: 500px; */
   text-decoration: underline double;
-  position: relative;
+  /* position: relative;
   margin-left: auto;
   margin-right: auto;
-  outline: solid;
-  margin-top: -197px;
-  margin-bottom: 200px;
+  outline: solid; */
+  /* margin-top: -197px; */
+  /* margin-bottom: 200px; */
+}
+
+.navigation {
+  display: flex;
+  gap: 8px;
+  justify-content: space-evenly;
+  margin-top: -165px;
+  margin-right: 10px;
+
+  font-variant: small-caps;
+  flex: 1;
+  justify-content: end;
+  /* height: auto; */
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.navigation > * {
+  border: 2px dashed black;
+  display: flex;
+  align-items: center;
+  height: 39px;
+}
+.about {
+  /* font-size: 12pt; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-variant: small-caps; */
 }
 
 .logo-med {
-  position: absolute;
+  position: fixed;
   width: 100px;
   height: 100px;
   top: 0px;
   left: 0px;
-  opacity: 0.5;
+  opacity: ;
 }
 .right-logo {
-  position: absolute;
+  position: fixed;
   height: 100px;
   width: 100px;
   top: 0px;
   right: 0px;
-  opacity: 0.5;
+  opacity: ;
 }
 #slogan {
   border: 0.5px solid black;
